--- a/_config.yaml
+++ b/_config.yaml
@@ -1,6 +1,6 @@
 # site properties and page defaults
-title: cstl-kaist
-subtitle: 
+title: CSTL
+subtitle: Collaborative Social Technologies Lab
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
 footer: images/background.jpg
