--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -22,6 +22,10 @@ undergrad:
   icon: fa-solid fa-user-graduate
   description: Undergraduate Intern
 
+affiliated:
+  icon: fa-solid fa-graduation-cap
+  description: Affiliated Member
+
 
 # general
 
@@ -40,7 +44,7 @@ external:
   text: External Link
   tooltip: External link
 
-home-page:
+homepage:
   icon: fa-solid fa-house-user
   text: Home Page
   tooltip: Home page
