--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,155 +1,134 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
-- id: doi:10.1093/nar/gkad289
-  title: 'MyGeneset.info: an interactive and programmatic platform for community-curated
-    and user-created collections of genes'
-  authors:
-  - Ricardo Avila
-  - Vincent Rubinetti
-  - Xinghua Zhou
-  - Dongbo Hu
-  - Zhongchao Qian
-  - Marco Alvarado Cano
-  - Everaldo Rodolpho
-  - Ginger Tsueng
-  - Casey Greene
-  - Chunlei Wu
-  publisher: Nucleic Acids Research
-  date: '2023-04-18'
-  link: https://doi.org/gr5hb5
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
 - id: doi:10.1101/2023.01.05.522941
-  title: Hetnet connectivity search provides rapid insights into how two biomedical
-    entities are related
+  title: "Metaphors in Moderation"
   authors:
-  - Daniel S. Himmelstein
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Kyle Kloster
-  - Benjamin J. Heil
-  - Faisal Alquaddoomi
-  - Dongbo Hu
-  - David N. Nicholson
-  - Yun Hao
-  - Blair D. Sullivan
-  - Michael W. Nagle
-  - Casey S. Greene
-  publisher: Cold Spring Harbor Laboratory
-  date: '2023-01-07'
-  link: https://doi.org/grmcb9
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
-- id: doi:10.1093/gigascience/giad047
-  title: Hetnet connectivity search provides rapid insights into how biomedical entities
-    are related
+  - Joseph Seering
+  - Geoff Kaufman
+  - Stevie Chancello
+  publisher: New Media and Society 2020
+  date: '2020-10-20'
+  link: https://doi.org/10.1177/1461444820964968
+  image: images/publications/Joseph-2021-Metaphors.png
+
+- id: doi:10.1101/2023.01.05.522941
+  title: "Moderator Chatbot for Deliberative Discussion: Effects of Discussion Structure and Discussant Facilitation"
   authors:
-  - Daniel S Himmelstein
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Kyle Kloster
-  - Benjamin J Heil
-  - Faisal Alquaddoomi
-  - Dongbo Hu
-  - David N Nicholson
-  - Yun Hao
-  - Blair D Sullivan
-  - Michael W Nagle
-  - Casey S Greene
-  publisher: GigaScience
-  date: '2022-12-28'
-  link: https://doi.org/gsd85n
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
-- id: doi:10.1186/s13059-020-02021-3
-  title: Compressing gene expression data using multiple latent space dimensionalities
-    learns complementary biological representations
+  - Soomin Kim
+  - Jinsu Eun
+  - Joseph Seering
+  - Joonhwan Lee
+  publisher: CSCW 2021
+  date: '2021-04-22'
+  link: https://doi.org/10.1145/3449161
+  image: images/publications/Joseph-2021-Chatbot.png
+
+- id: https://doi.org/10.1145/3555552
+  title: "Measuring the Prevalence of Anti-Social Behavior in Online CommunitiesMeasuring the Prevalence of Anti-Social Behavior in Online Communities"
   authors:
-  - Gregory P. Way
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Daniel S. Himmelstein
-  - Casey S. Greene
-  publisher: Genome Biology
-  date: '2020-05-11'
-  link: https://doi.org/gg2mjh
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
-- id: doi:10.1371/journal.pcbi.1007128
-  title: Open collaborative writing with Manubot
+  - Joon Sung Park
+  - Joseph Seering
+  - Michael S. Bernstein
+  publisher: CSCW 2022
+  date: '2022-11-11'
+  link: https://doi.org/10.1145/3555552
+  image: images/publications/Joseph-2022-AntiSocial.png
+
+- id: 10.54501/jots.v1i2.34
+  title: "Pride and Professionalization in Volunteer Moderation: Lessons for Effective Platform–User Collaboration"
   authors:
-  - Daniel S. Himmelstein
-  - Vincent Rubinetti
-  - David R. Slochower
-  - Dongbo Hu
-  - Venkat S. Malladi
-  - Casey S. Greene
-  - Anthony Gitter
-  publisher: PLOS Computational Biology
-  date: '2020-12-04'
-  link: https://doi.org/c7np
-  orcid: 0000-0002-4655-3773
-  plugin: sources.py
-  file: sources.yaml
-  type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed
-    do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  - Joseph Seering
+  - Brianna Dym
+  - Geoff Kaufman
+  - Michael S. Bernstein
+  publisher: The Journal of Online Trust & Safety
+  date: '2022-02-28'
+  link: https://tsjournal.org/index.php/jots/article/view/34/16
+  image: images/publications/Joseph-2022-VolunteerModeration.png
+
+- id: https://doi.org/10.1145/3579609
+  title: "Hate Raids on Twitch: Echoes of the Past, New Modalities, and Implications for Platform Governance"
+  authors:
+  - Catherine Han
+  - Joseph Seering
+  - Deepak Kumar
+  - Jeffrey T. Hancock
+  - Zakir Durumeric
+  publisher: CSCW 2023
+  date: '2023-04-16'
+  link: https://doi.org/10.1145/3579609
+  image: images/publications/Joseph-2023-HateRaids.png
+
+- id: https://doi.org/10.1145/3567568
+  title: "Who Moderates on Twitch and What Do They Do?: Quantifying Practices in Community Moderation on Twitch"
+  authors:
+  - Joseph Seering
+  - Sanjay R. Kairam
+  publisher: GROUP 2022-2023
+  date: '2022-12-29'
+  link: https://doi.org/10.1145/3567568
+  image: images/publications/Joseph-2023-Twitch.png
+
+- id: https://doi.org/10.1145/3640543.3645155
+  title: "DataDive: Supporting Readers' Contextualization of Statistical Statements with Data Exploration"
+  authors:
+  - Hyunwoo Kim
+  - Khanh Duy Le
+  - Gionnieve Lim
+  - Dae Hyun Kim
+  - Yoo Jin Hong
+  - Juho Kim
+  publisher: IUI 2024
+  date: '2024-04-05'
+  link: https://doi.org/10.1145/3640543.3645155
+  image: images/publications/Yoojin-2024-DataDive.png
   buttons:
-  - type: manubot
-    link: https://greenelab.github.io/meta-review/
-  - type: source
-    text: Manuscript Source
-    link: https://github.com/greenelab/meta-review
   - type: website
-    link: http://manubot.org/
-  tags:
-  - open science
-  - collaboration
-  repo: greenelab/meta-review
-- id: doi:10.1101/573782
-  title: Sequential compression of gene expression across dimensionalities and methods
-    reveals no single best method or dimensionality
+    link: https://datadive.kixlab.org/
+
+- id: doi.org/10.1080/01292986.2024.2342822
+  title: 'The role of English Wikipedia in mediating East Asian historical disputes: the case of Balhae'
   authors:
-  - Gregory P. Way
-  - Michael Zietz
-  - Vincent Rubinetti
-  - Daniel S. Himmelstein
-  - Casey S. Greene
-  publisher: Cold Spring Harbor Laboratory
-  date: '2019-03-11'
-  link: https://doi.org/gfxjxf
-  orcid: 0000-0002-4655-3773
-  plugin: orcid.py
-  file: orcid.yaml
-- id: doi:10.1016/j.csbj.2020.05.017
-  title: Constructing knowledge graphs and their biomedical applications
-  authors:
-  - David N. Nicholson
-  - Casey S. Greene
-  publisher: Computational and Structural Biotechnology Journal
-  date: '2020-01-01'
-  link: https://doi.org/gg7m48
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-  plugin: sources.py
-  file: sources.yaml
-- id: doi:10.7554/eLife.32822
-  title: Sci-Hub provides access to nearly all scholarly literature
-  authors:
-  - Daniel S Himmelstein
-  - Ariel Rodriguez Romero
-  - Jacob G Levernier
-  - Thomas Anthony Munro
-  - Stephen Reid McLaughlin
-  - Bastian Greshake Tzovaras
-  - Casey S Greene
-  publisher: eLife
-  date: '2018-03-01'
-  link: https://doi.org/ckcj
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
-  plugin: sources.py
-  file: sources.yaml
+  - Jonghyun Jee
+  - Byungjun Kim
+  - Bong Gwan Jun
+  publisher: Asian Journal of Communication
+  date: '2024-04-04'
+  link: https://doi.org/10.1080/01292986.2024.2342822
+  image: images/publications/Jonghyun-2024-Wiki.png
+
+
+# sample format
+# - id: doi:10.1371/journal.pcbi.1007128
+#   title: Open collaborative writing with Manubot
+#   authors:
+#   - Daniel S. Himmelstein
+#   - Vincent Rubinetti
+#   - David R. Slochower
+#   - Dongbo Hu
+#   - Venkat S. Malladi
+#   - Casey S. Greene
+#   - Anthony Gitter
+#   publisher: PLOS Computational Biology
+#   date: '2020-12-04'
+#   link: https://doi.org/c7np
+#   orcid: 0000-0002-4655-3773
+#   plugin: sources.py
+#   file: sources.yaml
+#   type: paper
+#   description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed
+#     do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+#   image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+#   buttons:
+#   - type: manubot
+#     link: https://greenelab.github.io/meta-review/
+#   - type: source
+#     text: Manuscript Source
+#     link: https://github.com/greenelab/meta-review
+#   - type: website
+#     link: http://manubot.org/
+#   tags:
+#   - open science
+#   - collaboration
+#   repo: greenelab/meta-review
+# - id: doi:10.1101/573782
