--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: CSTL
 subtitle: Collaborative Social Technologies Lab
 description: An engaging 1-3 sentence description of your lab.
-header: images/background.jpg
-footer: images/background.jpg
+header: images/background.jpeg
+footer: images/background.jpeg
 
 # site social media and other links
 links:
