revise doi number

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,7 +1,7 @@
-- id: doi:10.1101/2023.01.05.522941
+- id: doi:10.1177/14614448209649
   image: images/publications/Joseph-2021-Metaphors.png
 
-- id: doi:10.1101/2023.01.05.522941
+- id: doi:10.1145/3449161
   image: images/publications/Joseph-2021-Chatbot.png
 
 - id: doi:10.1145/3555552
