--- a/_config.yaml
+++ b/_config.yaml
@@ -33,6 +33,11 @@ defaults:
       type: "posts"
     values:
       layout: post
+  # markdown files in /_news
+  - scope:
+      type: "news"
+    values:
+      layout: news
 
 collections:
   # generate page for each member
@@ -40,6 +45,9 @@ collections:
     output: true
   # generate page for each post
   posts:
+    output: true
+  # generate page for each post
+  news:
     output: true
 
 # jekyll plugins
