--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,18 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- id: doi:10.1145/
+  title: |
+    “It’s Great Because It’s Ran By Us”: Empowering Teen Volunteer Discord Moderators to Design Healthy and Engaging Youth-Led Online Communities
+  authors:
+  - Jina Yoon
+  - Amy X. Zhang
+  - Joseph Seering
+  publisher: Proceedings of the ACM on Human-Computer Interaction
+  date: '2025-04-01'
+  link: https://joseph.seering.org/papers/Yoon_Zhang_and_Seering_2025_Discord_Teen_Mods.pdf
+  image: images/publications/Joseph-2025-DiscordYouth.png
+  plugin: sources.py
+  file: sources.yaml
 - id: doi:10.1145/3686941
   title: |
     Chillbot: Content Moderation in the Backchannel
