update group photo & fix typo

--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -4,7 +4,7 @@
 
 professor:
   icon: fa-solid fa-microscope
-  description: Associate Professor
+  description: Assistant Professor
 
 postdoc:
   icon: fa-solid fa-glasses
