Update CHI2025 Juhoon paper

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,6 @@
+- id: doi:10.1145/3706598
+  image: images/publications/Juhoon-2025-League.png
+
 - id: doi:10.1145/3449161
   image: images/publications/Joseph-2021-Chatbot.png
 
