--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,20 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- id: doi:10.1145/3706598
+  title: 'Less Talk, More Trust: Understanding Players' In-game Assessment of Communication Processes in League of Legends'
+  authors:
+  - Juhoon Lee
+  - Seoyoung Kim
+  - Yeon Su Park
+  - Juho Kim
+  - Jeong-woo Jang
+  - Joseph Seering
+  publisher: CHI2025 Conference on Human Factors in Computing Systems
+  date: '2025-04-30'
+  link: https://arxiv.org/pdf/2502.17935
+  image: images/publications/Juhoon-2025-League.png
+  plugin: sources.py
+  file: sources.yaml
 - id: doi:10.1145/3449161
   title: Moderator Chatbot for Deliberative Discussion
   authors:
