Updated DOI for Juhoon's CHI25 paper

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,4 +1,4 @@
-- id: doi:10.1145/3706598
+- id: doi:10.1145/3706598.3714226
   image: images/publications/Juhoon-2025-League.png
 
 - id: doi:10.1145/3449161
