--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,6 +1,6 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
-- id:
+- id: doi:10.1145/3637394
   title: 'Less Talk, More Trust: Understanding Players' In-game Assessment of Communication Processes in League of Legends'
   authors:
   - Juhoon Lee
