Update CHI2025 papers

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,5 +1,19 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
+- id: https://doi.org/10.1145/3706598.3713969
+  title: |
+    Leveling Up Together: Fostering Positive Growth and Safe Online Spaces for Teen Roblox Developers
+  authors:
+   - Yubin Choi
+   - Jeanne Choi
+   - Joseph Seering
+  publisher: CHI25 Conference on Human Factors in Computing Systems
+  date: ‘2025-04-30’
+  link: https://arxiv.org/abs/2502.18120
+  image: images/publications/Yubin-2025-Roblox.jpg
+  date: ‘2025-04-30’
+  plugin: sources.py
+  file: sources.yaml
 - id: doi.org/10.1145/3706598.3713598
   title: |
      The Design Space for Online Restorative Justice Tools: A Case Study with ApoloBot
