--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -7,7 +7,7 @@
    - Yubin Choi
    - Jeanne Choi
    - Joseph Seering
-  publisher: CHI25 Conference on Human Factors in Computing Systems
+  publisher: CHI Conference on Human Factors in Computing Systems
   date: ‘2025-04-30’
   link: https://arxiv.org/abs/2502.18120
   image: images/publications/Yubin-2025-Roblox.jpg
