Updated the 2025 papers back

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,18 @@
+- id: doi:10.1145/3706598.3713598
+  image: images/publications/Rubi-2025-ApoloBot.png
+
+- id: doi:10.1145/3706598.3714226
+  image: images/publications/Juhoon-2025-League.png
+
+- id: doi:10.1145/3711114
+  image: images/publications/Joseph-2025-DiscordYouth.png
+
+- id: doi:10.1145/3686941
+  image: images/publications/Joseph-2025-Chillbot.png
+
+- id: doi.org/10.1145/3706598.3713969
+  image: images/publications/Yubin-2025-Roblox.jpg
+
 - id: doi:10.1145/3449161
   image: images/publications/Joseph-2021-Chatbot.png
 
