Fixed citation error

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -10,7 +10,7 @@
 - id: doi:10.1145/3686941
   image: images/publications/Joseph-2025-Chillbot.png
 
-- id: doi.org/10.1145/3706598.3713969
+- id: doi:10.1145/3706598.3713969
   image: images/publications/Yubin-2025-Roblox.jpg
 
 - id: doi:10.1145/3449161
