Retrying Joseph's Discord Youth paper

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,5 +1,5 @@
 - id: doi:10.1145/3711114
-  image: images/publications/Joseph-2025-DiscordYouth.png
+  image: 
 
 - id: doi:10.1145/3706598.3713598
   image: images/publications/Rubi-2025-ApoloBot.png
