--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
 - id: doi:10.1145/3711114
-  title: '"It''s Great Because It''s Ran By Us": Empowering Teen Volunteer Discord
+  title: '"It’s Great Because It’s Ran By Us": Empowering Teen Volunteer Discord
     Moderators to Design Healthy and Engaging Youth-Led Online Communities'
   authors:
   - Jina Yoon
@@ -10,7 +10,7 @@
   publisher: Proceedings of the ACM on Human-Computer Interaction
   date: '2025-05-02'
   link: https://doi.org/g92vsz
-  image: null
+  image: images/publications/Joseph-2025-DiscordYouth.png
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3706598.3713598
