--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,7 +1,7 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
 - id: doi:10.1145/3711114
-  title: '"It''s Great Because It''s Ran By Us": Empowering Teen Volunteer Discord
+  title: '\"It''s Great Because It''s Ran By Us\": Empowering Teen Volunteer Discord
     Moderators to Design Healthy and Engaging Youth-Led Online Communities'
   authors:
   - Jina Yoon
