--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,8 +1,8 @@
 # DO NOT EDIT, GENERATED AUTOMATICALLY
 
 - id: doi:10.1145/3711114
-  title: '"It''s Great Because It''s Ran By Us": Empowering Teen Volunteer Discord
-    Moderators to Design Healthy and Engaging Youth-Led Online Communities'
+  title: 'The Design Space for Online Restorative Justice Tools: A Case Study with
+    ApoloBot'
   authors:
   - Jina Yoon
   - Amy X. Zhang
