Testing member order and fixed background address

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: CSTL
 subtitle: Collaborative Social Technologies Lab
 description: Room 623, N1 Kim Beang-Ho Kim Sam-Youl ITC Building, KAIST, 291 Daehak-ro, Yuseong-gu, Daejeon 34141, South Korea
-header: images/background.png
-footer: images/background.png
+header: images/background.jpg
+footer: images/background.jpg
 
 # site social media and other links
 links:
