Updated author list

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,6 @@
+- id: doi:10.2139/ssrn.5399528
+  image: 
+
 - id: doi:10.48550/arXiv.2508.00439
   image: images/publications/Jeanne-2025-HateBuffer.jpg
 
