Fixed mobile version and updated to Associate Professor

--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -4,7 +4,7 @@
 
 professor:
   icon: fa-solid fa-microscope
-  description: Assistant Professor
+  description: Associate Professor
 
 postdoc:
   icon: fa-solid fa-glasses
