--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -12,6 +12,9 @@
   image: null
   tags:
   - Book Chapter
+  - Trust and Safety
+  - Online Governance
+  - Content Moderation
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.48550/arXiv.2508.00439
@@ -29,8 +32,11 @@
   link: https://doi.org/g92zhk
   image: images/publications/Jeanne-2025-HateBuffer.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Content Moderation
+  - Trust and Safety
+  - System Building
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.48550/arXiv.2509.06557
@@ -46,8 +52,11 @@
   link: https://doi.org/g92zhm
   image: images/publications/Juhoon-2025-Appeals.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Online Governance
+  - Content Moderation
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3711114
@@ -62,8 +71,11 @@
   link: https://doi.org/g92vsz
   image: images/publications/Joseph-2025-DiscordYouth.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Online Governance
+  - Qualitative
+  - Content Moderation
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3706598.3713598
@@ -78,8 +90,11 @@
   link: https://doi.org/g9hj5z
   image: images/publications/Rubi-2025-ApoloBot.jpg
   tags:
+  - Conference
   - CHI
-  - Paper
+  - System Building
+  - Online Governance
+  - Digital Collaboration
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3706598.3714226
@@ -98,8 +113,11 @@
   link: https://doi.org/g92vsx
   image: images/publications/Juhoon-2025-League.jpg
   tags:
+  - Conference
   - CHI
-  - Paper
+  - Digital Collaboration
+  - Online Governance
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3686941
@@ -116,8 +134,11 @@
   link: https://doi.org/g92vs2
   image: images/publications/Joseph-2025-Chillbot.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Content Moderation
+  - System Building
+  - Online Governance
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3706598.3713969
@@ -133,8 +154,11 @@
   link: https://doi.org/g92vs3
   image: images/publications/Yubin-2025-Roblox.jpg
   tags:
+  - Conference
   - CHI
-  - Paper
+  - Trust and Safety
+  - Digital Collaboration
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3449161
@@ -149,8 +173,11 @@
   link: https://doi.org/gpgzg8
   image: images/publications/Joseph-2021-Chatbot.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Agents
+  - Online Discussion
+  - System Building
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3555552
@@ -164,8 +191,11 @@
   link: https://doi.org/gtt6qj
   image: images/publications/Joseph-2022-AntiSocial.jpg
   tags:
+  - Conference
   - CSCW
-  - Paper
+  - Content Moderation
+  - Trust and Safety
+  - Quantitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.54501/jots.v1i2.34
@@ -180,6 +210,12 @@
   date: '2022-02-28'
   link: https://doi.org/gpmmjq
   image: images/publications/Joseph-2022-VolunteerModeration.jpg
+  tags:
+  - Journal
+  - Journal of Online Trust and Safety
+  - Online Governance
+  - Content Moderation
+  - Digital Collaboration
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3579609
@@ -195,6 +231,11 @@
   date: '2023-04-14'
   link: https://doi.org/gtt6qk
   image: images/publications/Joseph-2023-HateRaids.jpg
+  tags:
+  - Conference
+  - CSCW
+  - Trust and Safety
+  - Quantitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3567568
@@ -206,6 +247,12 @@
   date: '2022-12-29'
   link: https://doi.org/gs98ph
   image: images/publications/Joseph-2023-Twitch.jpg
+  tags:
+  - Conference
+  - GROUP
+  - Content Moderation
+  - Qualitative
+  - Online Governance
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3640543.3645155
@@ -223,6 +270,11 @@
   date: '2024-03-18'
   link: https://doi.org/gtt6qm
   image: images/publications/Yoojin-2024-DataDive.jpg
+  tags:
+  - Conference
+  - IUI
+  - Online Discussion
+  - System Building
   buttons:
   - type: website
     link: https://datadive.kixlab.org/
@@ -239,6 +291,11 @@
   date: '2024-04-22'
   link: https://doi.org/gtt6qn
   image: images/publications/Jonghyun-2024-Wiki.jpg
+  tags:
+  - Journal
+  - Asian Journal of Communication
+  - Digital Collaboration
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.9728/dcs.2023.24.3.473
@@ -252,6 +309,11 @@
   date: '2023-03-31'
   link: https://doi.org/gtt6qp
   image: images/publications/Jeanne-2023-Metaverse.jpg
+  tags:
+  - Journal
+  - Journal of Digital Contents Safety
+  - Accessibility
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.3233/SHTI230646
@@ -264,6 +326,11 @@
   date: '2023-08-23'
   link: https://doi.org/gtt6qq
   image: images/publications/Jeanne-2023-Accessibility.jpg
+  tags:
+  - Extended Abstract
+  - AAATE
+  - Accessibility
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1109/BigComp60711.2024.00049
@@ -279,6 +346,12 @@
   date: '2024-02-18'
   link: https://doi.org/gtt6qr
   image: images/publications/Yubin-2024-ContextAware.jpg
+  tags:
+  - Conference
+  - BigComp
+  - Trust and Safety
+  - Dataset
+  - Quantitative
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3491102.3501948
@@ -292,6 +365,9 @@
   date: '2022-04-29'
   link: https://doi.org/gtt6qs
   image: images/publications/Yubin-2022-FitVid.jpg
+  tags:
+  - CHI
+  - System Building
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1145/3491102.3502054
@@ -306,5 +382,9 @@
   date: '2022-04-27'
   link: https://doi.org/gtt6qt
   image: images/publications/Yubin-2022-MOOCs.jpg
+  tags:
+  - Conference
+  - CHI
+  - Qualitative
   plugin: sources.py
   file: sources.yaml
