--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,9 +1,4 @@
-- id: doi:10.1145/3772318.3790285
-  title: Evalet
-  authors:
-  - Heechan Lee
-  - Taesoo Kim
-  - Joseph Seering
+- id: doi:10.48550/arXiv.2509.11206
   image: 
   tags:
     - Conference
