--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -6,7 +6,7 @@
     - System Building
     - LLM Evaluation
     - Sensemaking
-  publisher: "Trust, Safety, and the Internet We Share: Multistakeholder Insights"
+  publisher: Proceedings of CHI
   date: '2026-04-13'
 
 - id: doi:10.2139/ssrn.5399528
