Updating Yoojin and Saetbyeol's papers

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,22 +1,36 @@
 - id: doi:10.48550/arXiv.2510.02766
-  image: 
+  title: "Deepfake, Real Harm: A Participatory Approach for Imagining Infrastructures to Combat Deepfake Sexual Abuse"
+  authors:
+    - Saetbyeol Leeyouk, Joseph Seering
+  image: images/publications/Saetbyeol-2026-Deepfake.jpg
+  tags:
+    - Conference
+    - CHI
+    - Trust and Safety
+    - Content Moderation
+    - Qualitative
+  publisher: Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems 
+  date: '2026-04-13'
+
+- id: doi:10.48550/arXiv.2510.02766
+  image: images/publications/Yoojin-2026-Discourse.jpg
   tags:
     - Conference
     - CHI
     - System Building
     - Online Discussion
-  publisher: Proceedings of CHI
+  publisher: Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems 
   date: '2026-04-13'
 
 - id: doi:10.48550/arXiv.2509.11206
-  image: 
+  image: images/publications/Heechan-2026-Evalet.jpg
   tags:
     - Conference
     - CHI
     - System Building
     - LLM Evaluation
     - Sensemaking
-  publisher: Proceedings of CHI
+  publisher: Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems 
   date: '2026-04-13'
 
 - id: doi:10.2139/ssrn.5399528
