--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,5 +1,19 @@
+- id: doi.org:10.24993/JKLCY.2020.12.27.7
+  title: "Deepfake, Real Harm: A Participatory Approach for Imagining Infrastructures to Combat Deepfake Sexual Abuse"
+  authors:
+    - Saetbyeol Leeyouk, Joseph Seering
+  image: images/publications/Saetbyeol-2026-Deepfake.jpg
+  tags:
+    - Conference
+    - CHI
+    - Trust and Safety
+    - Content Moderation
+    - Qualitative
+  publisher: Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems 
+  date: '2026-04-13'
+
 - id: doi:10.48550/arXiv.2510.02766
-  image: images/publications/Yoojin-2026-Discourse.jpg
+  image: images/publications/Yoojin-2026-Discourse.png
   tags:
     - Conference
     - CHI
@@ -9,7 +23,7 @@
   date: '2026-04-13'
 
 - id: doi:10.48550/arXiv.2509.11206
-  image: images/publications/Heechan-2026-Evalet.jpg
+  image: images/publications/Heechan-2026-Evalet.png
   tags:
     - Conference
     - CHI
