Fixing Saetbyeol's paper

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -8,6 +8,7 @@
     - Qualitative
   publisher: Proceedings of the 2026 CHI Conference on Human Factors in Computing Systems 
   date: '2026-04-13'
+  link: cstlab.org
 
 - id: doi:10.48550/arXiv.2510.02766
   image: images/publications/Yoojin-2026-Discourse.jpg
