--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,5 +1,8 @@
 - title: "Deepfake, Real Harm: A Participatory Approach for Imagining Infrastructures to Combat Deepfake Sexual Abuse"
   image: images/publications/Saetbyeol-2026-Deepfake.jpg
+  authors:
+    - Saetbyeol Leeyouk
+    - Joseph Seering
   tags:
     - Conference
     - CHI
