--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,5 +1,8 @@
 - id: doi:10.48550/arXiv.2510.02766
   image: images/publications/Yoojin-2026-Discourse.jpg
+  buttons:
+    - type: source
+      link: pdfs/publications/Yoojin-2026-Discourse.pdf
   tags:
     - Conference
     - CHI
@@ -11,6 +14,8 @@
 - id: doi:10.48550/arXiv.2509.11206
   image: images/publications/Heechan-2026-Evalet.jpg
   buttons:
+    - type: source
+      link: pdfs/publications/Heechan-2026-Evalet.pdf
     - type: website
       link: https://evalet.netlify.app/
   tags:
@@ -205,7 +210,7 @@
   image: images/publications/Saetbyeol-2026-Deepfake.jpg
   buttons:
     - type: source
-      link: https://evalet.netlify.app/
+      link: pdfs/publications/Saetbyeol-2026-Deepfake.pdf
   authors:
     - Saetbyeol Leeyouk
     - Joseph Seering
