--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -437,7 +437,8 @@
   - Qualitative
   plugin: sources.py
   file: sources.yaml
-- title: 'Deepfake, Real Harm: A Participatory Approach for Imagining Infrastructures
+- id: doi:10.1111
+  title: 'Deepfake, Real Harm: A Participatory Approach for Imagining Infrastructures
     to Combat Deepfake Sexual Abuse'
   image: images/publications/Saetbyeol-2026-Deepfake.jpg
   buttons:
